--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.livvinyl.fitness.app">
+    package="com.livvinyl.healthconnector.app">
    <application
         android:label="app"
         android:icon="@mipmap/ic_launcher">
