--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,14 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>To store image into gallery</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>To store image into gallery</string>
-	<key>NSCameraUsageDescription</key>
-	<string>For Pose Detection</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Livvinyl Fitness</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -28,6 +24,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>For Pose Detection</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>To store image into gallery</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To store image into gallery</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
