social login, add exercise, ect

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.livvinyl.healthconnector.app">
 <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="app"
+        android:label="Health Connector"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
