--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,15 +20,22 @@ dependencies:
 
   google_ml_kit: ^0.7.3
   camera: ^0.9.4+3
-  firebase_messaging: ^11.1.0
-  firebase_core: ^1.10.0
-  firebase_database: ^8.1.0
+  firebase_messaging: ^11.2.5
+  firebase_core: ^1.11.0
+  firebase_database: ^9.0.5
   permission_handler: ^8.3.0
-  flutter_tts: ^3.2.2
+  flutter_tts: ^3.2.3
   google_fonts: ^2.1.0
-  firebase_auth: ^3.3.3
-  connectivity: ^3.0.6
+  firebase_auth: ^3.3.5
   animated_button: ^0.2.0
+  cached_network_image: ^3.2.0
+  shared_preferences: ^2.0.11
+  image_picker: ^0.8.4+4
+  dropdown_search: ^2.0.1
+  google_sign_in: ^5.2.3
+  sign_in_with_apple: ^3.3.0
+  flutter_facebook_auth: ^4.0.1
+  connectivity_plus: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +50,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/social/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
