--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,13 @@
 name: health_connector
 description: Health connector.ai is health and fitness app powered by Livvinyl progressive media marketing.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -36,11 +30,23 @@ dependencies:
   sign_in_with_apple: ^3.3.0
   flutter_facebook_auth: ^4.0.1
   connectivity_plus: ^2.2.0
+  flutter_launcher_icons: ^0.9.2
+  octo_image: ^1.0.1
+  blurhash_dart: ^1.1.0
+  image: ^3.1.3
+
+flutter_icons:
+  #  image_path: "assets/images/icon-128x128.png"
+  image_path_android: "assets/logo.png"
+  image_path_ios: "assets/logo.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  adaptive_icon_background: "assets/logo.png" # only available for Android 8.0 devices and above
+  adaptive_icon_foreground: "assets/logo.png" # only available for Android 8.0 devices and above
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^1.0.0
 
 flutter:
@@ -51,12 +57,6 @@ flutter:
     - assets/
     - assets/images/
     - assets/social/
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
 
   # fonts:
   #   - family: Schyler
