--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
   slackNotification:
         name: Slack Notification
-        needs: release
+        # needs: release
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
