--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,4 +119,4 @@ jobs:
         - name: Slack Notification
           uses: rtCamp/action-slack-notify@v2
           env:
-            SLACK_WEBHOOK: https://hooks.slack.com/services/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 #${{ secrets.SLACK_WEBHOOK }}
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
