--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,22 @@ jobs:
 
       - name: Run Robo Tests in Firebase Test Lab
         run: gcloud firebase test android run --type robo --app app-release-apk/app-release.apk
+  deploy-TestFlight:
+    name: 'Upload app to TestFlight'
+    needs: [testlab, build-ios]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download ipa from artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: app-release-ipa
+      - uses: apple-actions/upload-testflight-build@v1
+        with: 
+          app-path: 'app-release-ipa/app.ipa' 
+          issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+          api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
+          api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
   release:
     name: release
     needs: [testlab, build-ios]
@@ -112,7 +128,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
   slackNotification:
         name: Slack Notification
-        # needs: release
+        needs: release
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
