--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           channel: 'stable'
       - run: flutter --version
       - run: flutter pub get
-      # - run: flutter test
+      # - run: flutter test 
       - name: Decoding android/key.properties
         run: echo "${{ secrets.KEYPROP_PROD }}" | base64 --decode > android/key.properties
       - name: Decoding android/neumodore_key.jks
@@ -92,7 +92,7 @@ jobs:
   deploy-TestFlight:
     name: 'Upload app to TestFlight'
     needs: [testlab, build-ios]
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Download ipa from artifacts
