--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,14 @@ dependencies:
     sdk: flutter
 
   google_ml_kit: ^0.7.3
-  camera: ^0.9.4+3
+  camera: ^0.9.4+19
   firebase_messaging: ^11.2.5
   firebase_core: ^1.11.0
   firebase_database: ^9.0.5
   permission_handler: ^8.3.0
   flutter_tts: ^3.2.3
   google_fonts: ^2.1.0
-  firebase_auth: ^3.3.5
+  firebase_auth: ^3.3.13
   animated_button: ^0.2.0
   cached_network_image: ^3.2.0
   shared_preferences: ^2.0.11
@@ -28,12 +28,13 @@ dependencies:
   dropdown_search: ^2.0.1
   google_sign_in: ^5.2.3
   sign_in_with_apple: ^3.3.0
-  flutter_facebook_auth: ^4.0.1
+  flutter_facebook_auth: ^4.1.2
   connectivity_plus: ^2.2.0
   flutter_launcher_icons: ^0.9.2
   octo_image: ^1.0.1
   blurhash_dart: ^1.1.0
   image: ^3.1.3
+  firebase_storage: ^10.2.12
 
 flutter_icons:
   #  image_path: "assets/images/icon-128x128.png"
