--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   blurhash_dart: ^1.1.0
   image: ^3.1.3
   firebase_storage: ^10.2.12
+  circular_countdown_timer: ^0.2.1
 
 flutter_icons:
   #  image_path: "assets/images/icon-128x128.png"
