--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,10 +109,10 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: app-release-aab
-      - name: Add whatsnew message CA
-        run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-CA
-      - name: Add whatsnew message US
-        run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-US
+      # - name: Add whatsnew message CA
+      #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-CA
+      # - name: Add whatsnew message US
+      #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-US
       - name: Upload Abb Bundle
         uses: r0adkll/upload-google-play@v1
         with:
@@ -122,7 +122,7 @@ jobs:
           track: alpha
           inAppUpdatePriority: 5
           userFraction: 0.33
-          whatsNewDirectory: whatsNewDirectory/whatsnew
+          # whatsNewDirectory: whatsNewDirectory/whatsnew
           mappingFile: build/app/outputs/mapping/release/mapping.txt
   deploy-TestFlight:
     name: 'Upload app to TestFlight'
