--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
   #   name: Test, Build & upload aab
   #   runs-on: ubuntu-latest
   #   steps:
-  #     - uses: actions/checkout@v2
+      # - uses: actions/checkout@v2
   #     - uses: actions/setup-java@v2
   #       with:
   #         distribution: 'temurin'
@@ -110,6 +110,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
       # - name: Download app bundle from artifacts
       #   uses: actions/download-artifact@v1
       #   with:
@@ -123,7 +124,7 @@ jobs:
       # - name: Add whatsnew message US
       #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-US
       - name: print
-        run:  ls
+        run:  ls -a
       - name: Upload Abb Bundle
         uses: r0adkll/upload-google-play@v1.0.15
         with:
