--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,46 +7,46 @@ on:
     branches:
       - master
 jobs:
-  build-android:
-    name: Test, Build & upload aab
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '8'
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '2.10.1'
-          channel: 'stable'
-      - name: Increment Build number
-        run: perl -i -pe 's/^(version:\s+\d+\.\d+\.\d+\+)(\d+)$/$1.(${{github.run_number}})/e' pubspec.yaml
-      - name: Get Flutter Pub
-        run: flutter pub get
-      - run: flutter pub get
-      # - run: flutter test 
-      - name: Decoding android/key.properties
-        run: echo "${{ secrets.KEYPROP_PROD }}" | base64 --decode > android/key.properties
-      - name: Decoding android/neumodore_key.jks
-        run: echo "${{ secrets.KEYJKS_PROD }}" | base64 --decode > android/app/key.jks
-      - run: flutter build appbundle --release --no-sound-null-safety
-      - name: upload aab to artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: app-release-aab
-          path: 'build/app/outputs/bundle/release/app-release.aab'
-      - name: upload mapping file to artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: android-mapping
-          path: 'build/app/outputs/mapping/release/mapping.txt'
-      # - name: Upload to slack step
-      #   uses: adrey/slack-file-upload-action@master
-      #   with:
-      #     token: ${{ secrets.SLACK_WEBHOOK }}
-      #     path: 'build/app/outputs/bundle/app-release.aab'
-      #     channel: healthconnector
+  # build-android:
+  #   name: Test, Build & upload aab
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-java@v2
+  #       with:
+  #         distribution: 'temurin'
+  #         java-version: '8'
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: '2.10.1'
+  #         channel: 'stable'
+  #     - name: Increment Build number
+  #       run: perl -i -pe 's/^(version:\s+\d+\.\d+\.\d+\+)(\d+)$/$1.(${{github.run_number}})/e' pubspec.yaml
+  #     - name: Get Flutter Pub
+  #       run: flutter pub get
+  #     - run: flutter pub get
+  #     # - run: flutter test 
+  #     - name: Decoding android/key.properties
+  #       run: echo "${{ secrets.KEYPROP_PROD }}" | base64 --decode > android/key.properties
+  #     - name: Decoding android/neumodore_key.jks
+  #       run: echo "${{ secrets.KEYJKS_PROD }}" | base64 --decode > android/app/key.jks
+  #     - run: flutter build appbundle --release --no-sound-null-safety
+  #     - name: upload aab to artifacts
+  #       uses: actions/upload-artifact@v1
+  #       with:
+  #         name: app-release-aab
+  #         path: 'build/app/outputs/bundle/release/app-release.aab'
+  #     - name: upload mapping file to artifacts
+  #       uses: actions/upload-artifact@v1
+  #       with:
+  #         name: android-mapping
+  #         path: 'build/app/outputs/mapping/release/mapping.txt'
+  #     # - name: Upload to slack step
+  #     #   uses: adrey/slack-file-upload-action@master
+  #     #   with:
+  #     #     token: ${{ secrets.SLACK_WEBHOOK }}
+  #     #     path: 'build/app/outputs/bundle/app-release.aab'
+  #     #     channel: healthconnector
   build-ios:
     name: Test, Build & upload ipa
     runs-on: macos-latest
@@ -64,21 +64,38 @@ jobs:
         run: perl -i -pe 's/^(version:\s+\d+\.\d+\.\d+\+)(\d+)$/$1.(${{github.run_number}})/e' pubspec.yaml
       - name: Get Flutter Pub
         run: flutter pub get
-      - name: Build iOS App
-        run: |
-          flutter build ios --no-codesign --no-sound-null-safety
-          cd build/ios/iphoneos
-          mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r app.ipa Payload
-      - name: upload ipa to artifacts
+      # - name: Build iOS App
+      #   run: |
+      #     flutter build ios --no-codesign --no-sound-null-safety
+      #     cd build/ios/iphoneos
+      #     mkdir Payload
+      #     cd Payload
+      #     ln -s ../Runner.app
+      #     cd ..
+      #     zip -r app.ipa Payload
+      # - name: upload ipa to artifacts
+      #   uses: actions/upload-artifact@v1
+      #   with:
+      #     name: app-release-ipa
+      #     path: 'build/ios/iphoneos/app.ipa'
+      #     if-no-files-found: echo "app.ipa not found"
+      - name: Build IOS App
+        uses: yukiarrr/ios-build-action@v1.5.0
+        with:
+          project-path: ios/Runner.xcodeproj
+          p12-base64: ${{ secrets.P12_BASE64 }}
+          mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
+          code-signing-identity: "iPhone Distribution"
+          team-id: ${{ secrets.TEAM_ID }}
+          workspace-path: ios/Runner.xcworkspace
+          scheme: "Runner"
+      - name: Rename ipa
+        run:  mv output.ipa app.ipa
+      - name: upload ipa
         uses: actions/upload-artifact@v1
         with:
           name: app-release-ipa
-          path: 'build/ios/iphoneos/app.ipa'
-          if-no-files-found: echo "app.ipa not found"
+          path: app.ipa
   # testlab:
   #   name: Run UI tests with Firebase Test Lab
   #   needs: build-android
@@ -104,36 +121,36 @@ jobs:
 
   #     - name: Run Robo Tests in Firebase Test Lab
   #       run: gcloud firebase test android run --type robo --app app-release-apk/app-release.apk
-  deploy-playstore:
-    name: 'Upload Android build to PlayStore console'
-    needs: [build-android]
-    runs-on: ubuntu-latest
+  # deploy-playstore:
+  #   name: 'Upload Android build to PlayStore console'
+  #   needs: [build-android]
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download app bundle from artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: app-release-aab
-      - name: Download android mapping from artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: android-mapping
-      # - name: Add whatsnew message CA
-      #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-CA
-      # - name: Add whatsnew message US
-      #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-US
-      - name: Upload Abb Bundle
-        uses: r0adkll/upload-google-play@v1.0.15
-        with:
-          serviceAccountJson: service_account.json
-          packageName: com.livvinyl.healthconnector.app
-          releaseFiles: app-release-aab/*.aab
-          track: internal
-          inAppUpdatePriority: 5
-          # userFraction: 1.0
-          # whatsNewDirectory: whatsNewDirectory/whatsnew
-          mappingFile:  android-mapping/mapping.txt
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Download app bundle from artifacts
+  #       uses: actions/download-artifact@v1
+  #       with:
+  #         name: app-release-aab
+  #     - name: Download android mapping from artifacts
+  #       uses: actions/download-artifact@v1
+  #       with:
+  #         name: android-mapping
+  #     # - name: Add whatsnew message CA
+  #     #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-CA
+  #     # - name: Add whatsnew message US
+  #     #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-US
+  #     - name: Upload Abb Bundle
+  #       uses: r0adkll/upload-google-play@v1.0.15
+  #       with:
+  #         serviceAccountJson: service_account.json
+  #         packageName: com.livvinyl.healthconnector.app
+  #         releaseFiles: app-release-aab/*.aab
+  #         track: internal
+  #         inAppUpdatePriority: 5
+  #         # userFraction: 1.0
+  #         # whatsNewDirectory: whatsNewDirectory/whatsnew
+  #         mappingFile:  android-mapping/mapping.txt
   deploy-TestFlight:
     name: 'Upload app to TestFlight'
     needs: [build-ios]
@@ -173,7 +190,7 @@ jobs:
   #         token: ${{ secrets.GITHUB_TOKEN }}
   slackNotification:
         name: Slack Notification
-        needs: [deploy-playstore, deploy-TestFlight]
+        needs: [deploy-TestFlight]
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
