--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,23 @@ jobs:
       #     name: app-release-ipa
       #     path: 'build/ios/iphoneos/app.ipa'
       #     if-no-files-found: echo "app.ipa not found"
+      - name: Setup Ruby (bundle)
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6
+          bundler-cache: true
+      - name: Restore Pods cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+      - name: Install Pods
+        run: cd ios && pod install --repo-update && cd ..
       - name: Build IOS App
         uses: yukiarrr/ios-build-action@v1.5.0
         with:
