--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,15 +64,15 @@ jobs:
         run: perl -i -pe 's/^(version:\s+\d+\.\d+\.\d+\+)(\d+)$/$1.(${{github.run_number}})/e' pubspec.yaml
       - name: Get Flutter Pub
         run: flutter pub get
-      # - name: Build iOS App
-      #   run: |
-      #     flutter build ios --no-codesign --no-sound-null-safety
-      #     cd build/ios/iphoneos
-      #     mkdir Payload
-      #     cd Payload
-      #     ln -s ../Runner.app
-      #     cd ..
-      #     zip -r app.ipa Payload
+      - name: Build iOS App
+        run: |
+          flutter build ios --no-codesign --no-sound-null-safety
+          cd build/ios/iphoneos
+          mkdir Payload
+          cd Payload
+          ln -s ../Runner.app
+          cd ..
+          zip -r app.ipa Payload
       # - name: upload ipa to artifacts
       #   uses: actions/upload-artifact@v1
       #   with:
@@ -84,18 +84,18 @@ jobs:
         with:
           ruby-version: 2.6
           bundler-cache: true
-      - name: Restore Pods cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ios/Pods
-            ~/Library/Caches/CocoaPods
-            ~/.cocoapods
-          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-      - name: Install Pods
-        run: cd ios && pod install --repo-update && cd ..
+      # - name: Restore Pods cache
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: |
+      #       ios/Pods
+      #       ~/Library/Caches/CocoaPods
+      #       ~/.cocoapods
+      #     key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pods-
+      # - name: Install Pods
+      #   run: cd ios && pod install --repo-update && cd ..
       - name: Build IOS App
         uses: yukiarrr/ios-build-action@v1.5.0
         with:
