--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,7 @@
+source 'https://cdn.cocoapods.org/'
+source 'https://git-codecommit.ap-southeast-1.amazonaws.com/v1/repos/myfiziq-sdk-podrepo'
 # Uncomment this line to define a global platform for your project
-platform :ios, '12.0'
+platform :ios, '13.4'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
