--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,53 +3,51 @@ description: Health connector.ai is health and fitness app powered by Livvinyl p
 
 publish_to: 'none'
 
-version: 1.0.0+3
+version: 1.0.9+3
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   # google_ml_kit: ^0.7.3
-  camera: ^0.9.7
-  firebase_messaging: ^11.4.0
-  firebase_core: ^1.17.0
-  firebase_database: ^9.0.14
+  camera: ^0.9.4+19
+  firebase_messaging: ^11.2.5
+  firebase_core: ^1.11.0
+  firebase_database: ^9.0.5
   permission_handler: ^9.2.0
-  flutter_tts: ^3.3.3
-  google_fonts: ^3.0.1
-  firebase_auth: ^3.3.18
+  flutter_tts: ^3.2.3
+  google_fonts: ^2.1.0
+  firebase_auth: ^3.3.13
   animated_button: ^0.2.0
-  cached_network_image: ^3.2.1
-  shared_preferences: ^2.0.15
-  image_picker: ^0.8.5+3
-  dropdown_search: ^4.0.1
-  google_sign_in: ^5.3.2
-  sign_in_with_apple: ^4.0.0
-  flutter_facebook_auth: ^4.3.4
+  cached_network_image: ^3.2.0
+  shared_preferences: ^2.0.11
+  image_picker: ^0.8.4+4
+  dropdown_search: ^2.0.1
+  google_sign_in: ^5.2.3
+  sign_in_with_apple: ^3.3.0
   connectivity_plus: ^2.2.0
   flutter_launcher_icons: ^0.9.2
-  octo_image: ^1.0.2
+  octo_image: ^1.0.1
   blurhash_dart: ^1.1.0
   image: ^3.1.3
-  firebase_storage: ^10.2.16
+  firebase_storage: ^10.2.12
   circular_countdown_timer: ^0.2.1
   persistent_bottom_nav_bar: ^4.0.2
-  # google_mlkit_pose_detection: ^0.3.0
-  google_mlkit_pose_detection:
-    git:
-      ref: a30744eee1d1b1f601e0dd5ce7f201ba377e1c64
-      path: packages/google_mlkit_pose_detection
-      url: https://github.com/sikandernoori/Google-Ml-Kit-plugin
-  google_mlkit_translation:
-    git:
-      ref: d3abcc432c7e85dd32185be9be0b9db063bcc970
-      path: packages/google_mlkit_translation
-      url: https://github.com/sikandernoori/Google-Ml-Kit-plugin
+  google_mlkit_pose_detection: ^0.3.0
+  google_mlkit_translation: ^0.3.0
   model_viewer: ^0.8.1
   flutter_cache_manager: ^3.3.0
+  agora_uikit: ^1.0.0
+  agora_rtc_engine: ^5.2.0
+  flutter_firebase_chat_core: ^1.5.4
+  file_picker: ^4.6.0
+  flutter_chat_ui: ^1.5.8
+  mime: ^1.0.2
+  open_file: ^3.2.1
+  loading_overlay: ^0.3.0
 
 
 flutter_icons:
@@ -74,7 +72,6 @@ flutter:
     - assets/
     - assets/images/
     - assets/social/
-    - assets/ahi_assets/
 
   # fonts:
   #   - family: Schyler
