--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "request": "launch",
             "type": "dart",
             "program": "lib/main.dart",
-            "args": [
-                "--no-sound-null-safety"
-            ]
+            // "args": [
+            //     "--no-sound-null-safety"
+            // ]
         },
         {
             "name": "health-connector (profile mode)",
