--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: Health connector.ai is health and fitness app powered by Livvinyl p
 
 publish_to: 'none'
 
-version: 1.0.10+3
+version: 1.0.0+9
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.3 <3.0.0'
 
 dependencies:
   flutter:
@@ -16,7 +16,7 @@ dependencies:
   camera: ^0.9.4+19
   firebase_messaging: ^11.2.5
   firebase_core: ^1.11.0
-  firebase_database: ^9.0.5
+  firebase_database: ^9.0.20
   permission_handler: ^9.2.0
   flutter_tts: ^3.2.3
   google_fonts: ^2.1.0
@@ -34,20 +34,35 @@ dependencies:
   blurhash_dart: ^1.1.0
   image: ^3.1.3
   firebase_storage: ^10.2.12
-  circular_countdown_timer: ^0.2.1
+  circular_countdown_timer: ^0.2.2
   persistent_bottom_nav_bar: ^4.0.2
   google_mlkit_pose_detection: ^0.3.0
   google_mlkit_translation: ^0.3.0
-  model_viewer: ^0.8.1
   flutter_cache_manager: ^3.3.0
-  agora_uikit: ^1.0.0
-  agora_rtc_engine: ^5.2.0
-  flutter_firebase_chat_core: ^1.5.4
+  agora_uikit: ^1.0.2
+  agora_rtc_engine: ^5.3.0
+  flutter_firebase_chat_core: ^1.6.3
   file_picker: ^4.6.0
-  flutter_chat_ui: ^1.5.8
+  flutter_chat_ui: ^1.6.4
   mime: ^1.0.2
   open_file: ^3.2.1
   loading_overlay: ^0.3.0
+  share_plus: ^4.0.10
+  path_provider: ^2.0.11
+  percent_indicator: ^4.2.2
+  syncfusion_flutter_charts: ^20.1.61
+  fl_chart: ^0.55.0
+  font_awesome_flutter: ^10.1.0
+  native_ar_viewer: ^0.0.1
+  flutter_downloader: ^1.8.0+1
+  quick_look: ^0.0.4
+  video_player: ^2.4.5
+  awesome_notifications: ^0.6.21
+  flutter_rating_bar: ^4.0.1
+  native_screenshot: #^1.0.0
+    path: ../native_screenshot
+  native_device_orientation: ^1.1.4
+  connectycube_flutter_call_kit: ^2.0.6
 
 
 flutter_icons:
