--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.livvinyl.healthconnector.app">
+    package="ai.healthconnector.mobileapp">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission  android:name="android.permission.BLUETOOTH"  />
     <uses-permission  android:name="android.permission.READ_PHONE_STATE"/>
@@ -9,6 +9,9 @@
     <uses-permission  android:name="android.permission.ACCESS_NETWORK_STATE"  />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE " />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:label="Health Connector"
         android:name="${applicationName}"
