--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   dropdown_search: ^2.0.1
   google_sign_in: ^5.2.3
   sign_in_with_apple: ^3.3.0
-  connectivity_plus: ^2.2.0
+  connectivity_plus: ^2.3.6+1
   flutter_launcher_icons: ^0.9.2
   octo_image: ^1.0.1
   blurhash_dart: ^1.1.0
@@ -63,6 +63,8 @@ dependencies:
     path: ../native_screenshot
   native_device_orientation: ^1.1.4
   connectycube_flutter_call_kit: ^2.0.6
+  provider: ^6.0.3
+  flutter_bloc: ^8.1.1
 
 
 flutter_icons:
