--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,11 @@ dependencies:
   video_player: ^2.4.5
   awesome_notifications: ^0.6.21
   flutter_rating_bar: ^4.0.1
-  native_screenshot: #^1.0.0
-    path: ../native_screenshot
+  # native_screenshot: #^1.0.0
+  #   path: ../native_screenshot
+  native_screenshot:
+    git:
+      url: https://github.com/sikandernoori/native_screenshot.git
   native_device_orientation: ^1.1.4
   connectycube_flutter_call_kit: ^2.0.6
   provider: ^6.0.3
