IOS bug fixed. Android un comment and upload playstore added

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,40 +9,39 @@ on:
     branches:
       - code-refactor
 jobs:
-  # build-android:
-  #   name: Test, Build & upload aab
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         ref: code-refactor
-  #     - uses: actions/setup-java@v2
-  #       with:
-  #         distribution: 'temurin'
-  #         java-version: '8'
-  #     - uses: subosito/flutter-action@v2
-  #       with:
-  #         flutter-version: '3.3.2'
-  #         channel: 'stable'
-  #     - name: Get Flutter Pub
-  #       run: flutter pub get
-  #     - name: Decoding android/key.properties
-  #       run: echo "${{ secrets.KEYPROP_PROD }}" | base64 --decode > android/key.properties
-  #     - name: Decoding android/neumodore_key.jks
-  #       run: echo "${{ secrets.KEYJKS_PROD }}" | base64 --decode > android/app/upload-keystore.jks
-  #     - name: Build app bundle
-  #       run: flutter build appbundle --release
-  #     - name: upload aab to artifacts
-  #       uses: actions/upload-artifact@v1
-  #       with:
-  #         name: app-release-aab
-  #         path: 'build/app/outputs/bundle/release/app-release.aab'
-  #     - name: upload mapping file to artifacts
-  #       uses: actions/upload-artifact@v1
-  #       with:
-  #         name: android-mapping
-  #         path: 'build/app/outputs/mapping/release/mapping.txt'
-  
+  build-android:
+    name: Test, Build & upload aab
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: code-refactor
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '8'
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.3.2'
+          channel: 'stable'
+      - name: Get Flutter Pub
+        run: flutter pub get
+      - name: Decoding android/key.properties
+        run: echo "${{ secrets.KEYPROP_PROD }}" | base64 --decode > android/key.properties
+      - name: Decoding android/neumodore_key.jks
+        run: echo "${{ secrets.KEYJKS_PROD }}" | base64 --decode > android/app/upload-keystore.jks
+      - name: Build app bundle
+        run: flutter build appbundle --release
+      - name: upload aab to artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-release-aab
+          path: 'build/app/outputs/bundle/release/app-release.aab'
+      - name: upload mapping file to artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: android-mapping
+          path: 'build/app/outputs/mapping/release/mapping.txt'
   build-ios:
     name: Build IOS
     runs-on: macos-latest
@@ -131,7 +130,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: master
+          ref: code-refactor
       - name: Download ipa
         uses: actions/download-artifact@v1
         with:
@@ -143,6 +142,34 @@ jobs:
           issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
           api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
           api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
+  upload_playstore:
+    name: PlayStore upload
+    needs: [build-android]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: code-refactor
+      - name: Download app bundle from artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: app-release-aab
+      - name: Download android mapping from artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: android-mapping
+      - name: Upload app to PlayStore
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+          packageName: ai.healthconnector.mobileapp
+          releaseFiles: ./app-release-aab/app-release.aab
+          track: internal
+          inAppUpdatePriority: 5
+          userFraction: 1.0
+          # whatsNewDirectory: whatsNewDirectory/whatsnew
+          mappingFile: android-mapping/mapping.txt
+
   # release:
   #   name: release
   #   needs: [upload_testflight]
