--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Health connector.ai is health and fitness app powered by Livvinyl p
 
 publish_to: 'none'
 
-version: 0.0.1+1
+version: 1.0.0+10
 
 environment:
   sdk: '>=2.17.3 <3.0.0'
@@ -14,7 +14,7 @@ dependencies:
 
   # google_ml_kit: ^0.7.3
   camera: ^0.9.4+19
-  firebase_messaging: ^11.2.5
+  firebase_messaging: ^13.1.0
   firebase_core: ^1.11.0
   firebase_database: ^9.0.20
   permission_handler: ^9.2.0
@@ -68,6 +68,7 @@ dependencies:
   connectycube_flutter_call_kit: ^2.0.6
   provider: ^6.0.3
   flutter_bloc: ^8.1.1
+  wakelock: ^0.6.2
 
 
 flutter_icons:
